:sparkles: seção aprenda a tríade web

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <ul>
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#top3">Top 3</a></li>
-                    <li><a href="#galerry">Gallery</a></li>
+                    <li><a href="#grid-one">Learning</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -47,16 +48,18 @@
     <section id="top3" class="white-img section">
         <div class="main-content top3-content">
             <h2>Top 3 Pilares da Criação Web</h2>
-            <p>O <em>HTML (HyperText Markup Language)</em> é o esqueleto, a estrutura fundamental. Ele define o conteúdo
+            <p>O <b><em>HTML (HyperText Markup Language)</em></b> é o esqueleto, a estrutura fundamental. Ele define o
+                conteúdo
                 da
                 página: onde estão os títulos, parágrafos, imagens e links. É a semântica, o significado e a ordem dos
                 elementos. Sem ele, teríamos apenas um monte de dados sem organização.</p>
-            <p>O <em>CSS (Cascading Style Sheets)</em> é a maquiagem, o design e o visual. Sua função é estilizar o
+            <p>O <b><em>CSS (Cascading Style Sheets)</em></b> é a maquiagem, o design e o visual. Sua função é estilizar
+                o
                 esqueleto de
                 HTML, ditando como ele deve parecer. Com CSS, controlamos cores, tipografia, espaçamento e,
                 crucialmente, criamos layouts responsivos que se adaptam perfeitamente a qualquer tela, transformando o
                 conteúdo bruto em uma interface agradável e profissional.</p>
-            <p>E, por fim, <em>o JavaScript</em> é o motor, a inteligência e a interatividade. Ele adiciona
+            <p>E, por fim, o <b><em>JavaScript</em></b> é o motor, a inteligência e a interatividade. Ele adiciona
                 comportamento à
                 página. É o JavaScript que permite que menus se abram, galerias de imagens deslizem, formulários validem
                 dados e que a página reaja às ações do usuário sem precisar ser recarregada. Ele é o que faz a
@@ -64,12 +67,42 @@
         </div>
     </section>
 
-    <section id="gallery" class="main-img section">
-        <div class="main-content gallery-content">
+    <section id="grid-one" class="grid-one main-img section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Aprenda a tríade web</h2>
+            <p class="grid-description">Sites para você aprender os três pilares da criação web.
+            </p>
+            <div class="grid">
+                <article>
+                    <h3>MDN Web Docs</h3>
+                    <p>O MDN não é apenas um tutorial, é a documentação oficial e mais completa da web. Para o HTML, ele
+                        oferece guias detalhados sobre cada tag, atributo e conceito. É a melhor fonte para entender a
+                        semântica e a funcionalidade de cada elemento.</p>
+                </article>
 
+                <article>
+                    <h3>W3Schools</h3>
+                    <p>É um dos sites mais tradicionais para aprender o básico de CSS (e HTML/JS). Seus tutoriais são
+                        diretos ao ponto, fáceis de seguir e possuem um editor de código interativo ("Try it Yourself")
+                        que permite praticar e ver o resultado instantaneamente.</p>
+                </article>
+
+                <article>
+                    <h3>FreeCodeCamp</h3>
+                    <p>O FreeCodeCamp oferece um currículo completo de desenvolvimento web, totalmente gratuito, com
+                        foco pesado em JavaScript. Ele adota uma abordagem de aprendizado por projetos, onde você
+                        constrói aplicações reais enquanto aprende, o que é fundamental para dominar a lógica de
+                        programação.</p>
+                </article>
+            </div>
         </div>
     </section>
 
+    <section id="gallery" class="white-img section">
+        <div class="main-content">
+
+        </div>
+    </section>
 </body>
 
 </html>
