:sparkles: seção gallery

--- a/index.html
+++ b/index.html
@@ -98,11 +98,38 @@
         </div>
     </section>
 
-    <section id="gallery" class="white-img section">
-        <div class="main-content">
+    <section id="gallery" class=" grid-one white-img section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Treine Display Grid, transição e rotação de imagens utilizando CSS!</p>
+            <div class="grid">
 
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/collie-border/n02106166_5869.jpg" alt="">
+                </div>
+
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/chihuahua/flora.jpg" alt="">
+                </div>
+
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/shiba/shiba-15.jpg" alt="">
+                </div>
+
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/labradoodle/Cali.jpg" alt="">
+                </div>
+
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/terrier-bedlington/n02093647_2108.jpg"
+                        alt="">
+                </div>
+
+                <div class="grid-img">
+                    <img src="https://images.dog.ceo/breeds/rottweiler/n02106550_2832.jpg" alt="">
+                </div>
+            </div>
         </div>
-    </section>
 </body>
 
 </html>
