:sparkles: seção work

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#top3">Top 3</a></li>
                     <li><a href="#grid-one">Learning</a></li>
                     <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#">Work</a></li>
+                    <li><a href="#work">Work</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -121,8 +121,7 @@
                 </div>
 
                 <div class="grid-img">
-                    <img src="https://images.dog.ceo/breeds/terrier-bedlington/n02093647_2108.jpg"
-                        alt="">
+                    <img src="https://images.dog.ceo/breeds/terrier-bedlington/n02093647_2108.jpg" alt="">
                 </div>
 
                 <div class="grid-img">
@@ -130,6 +129,36 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="work" class="grid-one main-img section">
+        <div class="grid-one-content main-content">
+            <h2 class="grid-main-heading">Profissões e a tríade web</h2>
+            <p class="grid-description"> Algumas profissões que utlizam HTML, CSS e JavaScript no seu dia a dia
+            </p>
+            <div class="grid">
+                <article>
+                    <h3>Dev Front-end</h3>
+                    <p>Constrói a interface do usuário completa, usando HTML para estrutura, CSS para estilo e
+                        JavaScript para interatividade, dando vida à experiência digital.</p>
+                </article>
+
+                <article>
+                    <h3>Web Designer</h3>
+                    <p> Cria o design visual e a experiência, mas com conhecimento em HTML e CSS para implementar suas
+                        criações diretamente e JavaScript para adicionar micro-interações, unindo estética e
+                        funcionalidade.</p>
+                </article>
+
+                <article>
+                    <h3>Marketing Digital</h3>
+                    <p>Utiliza HTML para SEO e estrutura de conteúdo, CSS para personalizar landing pages e engajamento
+                        visual, e JavaScript para implementar ferramentas de análise e otimização, maximizando o impacto
+                        das campanhas.</p>
+                </article>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
