:sparkles: seção pricing

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                     <li><a href="#grid-one">Learning</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#work">Work</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -159,6 +160,59 @@
             </div>
         </div>
     </section>
+
+    <section id="pricing" class="intro white-img section">
+        <div class="main-content top3-content">
+
+            <h2>Pricing</h2>
+            <p>A remuneração no desenvolvimento web é bastante atrativa e reflete a alta demanda por profissionais
+                qualificados. Ela varia significativamente com base na experiência, localização geográfica, nível de
+                especialização e o tipo de empresa (startup, agência, corporação). Profissionais com um bom portfólio,
+                habilidades avançadas e capacidade de resolver problemas complexos tendem a ter salários mais elevados e
+                excelentes oportunidades de crescimento.</p>
+                
+            <p>É importante notar que esses valores são médias e estimativas no Brasil, baseadas em dados de plataformas
+                de vagas e pesquisas de mercado. A variação é grande, e profissionais altamente especializados ou em
+                grandes centros urbanos podem ganhar muito mais.</p>
+
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing Table</caption>
+                    <thead>
+                        <tr>
+                            <th>Profissão</th>
+                            <th>Nível Junior</th>
+                            <th>Nível Pleno</th>
+                            <th>Nível Sênior</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Dev Front-end</td>
+                            <td>R$ 3.000 - 5.000</td>
+                            <td>R$ 6.000 - 10.000</td>
+                            <td>R$ 10.000 - 18.000+</td>
+                        </tr>
+
+                        <tr>
+                            <td>Web Designer</td>
+                            <td>R$ 2.500 - 4.500</td>
+                            <td>R$ 5.000 - 8.000</td>
+                            <td>R$ 8.000 - 14.000+</td>
+                        </tr>
+
+                        <tr>
+                            <td>Marketing Digital</td>
+                            <td>R$ 2.800 - 4.800</td>
+                            <td>R$ 5.500 - 9.000</td>
+                            <td>R$ 9.000 - 16.000+</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
