:sparkles: seção contact

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#work">Work</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -170,7 +170,7 @@
                 especialização e o tipo de empresa (startup, agência, corporação). Profissionais com um bom portfólio,
                 habilidades avançadas e capacidade de resolver problemas complexos tendem a ter salários mais elevados e
                 excelentes oportunidades de crescimento.</p>
-                
+
             <p>É importante notar que esses valores são médias e estimativas no Brasil, baseadas em dados de plataformas
                 de vagas e pesquisas de mercado. A variação é grande, e profissionais altamente especializados ou em
                 grandes centros urbanos podem ganhar muito mais.</p>
@@ -213,6 +213,62 @@
         </div>
     </section>
 
+    <section id="contact" class="intro main-img section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Entre em contato conosco</h2>
+                <p>Adoraríamos ouvir você! Seja para tirar dúvidas, solicitar um orçamento ou apenas para bater um papo
+                    sobre suas ideias, nossa equipe está pronta para atendê-lo. Preencha o formulário abaixo ou utilize
+                    nossos canais de contato direto. Sua mensagem é muito importante para nós e responderemos o mais
+                    breve possível.
+                </p>
+            </div>
+
+            <div class="intro-img">
+                <img src="assets/img/contact-img.svg"
+                    alt="Garpta segurando uma carta ao lado dela um celular moderno e um telefone antigo">
+            </div>
+
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact Us</legend>
+
+                    <div class="flex-input">
+                        <div class="form-group">
+                            <label for="first-name">First Name</label>
+                            <input type="text" name="first-name" id="first-name" placeholder="Ex: João">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="last-name">Last Name</label>
+                            <input type="text" name="last-name" id="last-name" placeholder="Ex: Silva">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" name="email" id="email" placeholder="Exemplo@email.com">
+                        </div>
+                    </div>
+
+                    <div class="form-group full-width">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="5" rows="5"
+                            placeholder="Escreva sua mensagem aqui"></textarea>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="submit">Enviar</button>
+                    </div>
+
+                </fieldset>
+            </div>
+        </div>
+    </section>
+
+    <footer class="white-img footer">
+        <p>Feito com carinho por <a target="_blank" href="https://github.com/helena-varela">Helena <3</a>
+        </p>
+    </footer>
 </body>
 
 </html>
