--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body class="main-img">
+
+    <input id="close-menu" class="close-menu" type="checkbox" aria-label="close menu" role="button">
+    <label class="close-menu-label" for="close-menu" title="close menu"></label>
     <section class="menu">
         <div class="main-content menu-content">
-            <h1><a href="#">LOGO</a></h1>
+            <h1 onclick="getElementById('close-menu').checked = false;"><a href="#">LOGO</a></h1>
             <nav>
-                <ul>
+                <ul onclick="getElementById('close-menu').checked = false;">
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#top3">Top 3</a></li>
                     <li><a href="#grid-one">Learning</a></li>
@@ -266,9 +269,13 @@
     </section>
 
     <footer class="white-img footer">
-        <p>Feito com carinho por <a target="_blank" href="https://github.com/helena-varela">Helena <3</a>
+        <p>Feito com carinho por <a target="_blank" href="https://github.com/helena-varela">Helena</a> <3
         </p>
     </footer>
+    <a class="back-to-top" href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
+            <path
+                d="M342.6 81.4C330.1 68.9 309.8 68.9 297.3 81.4L137.3 241.4C124.8 253.9 124.8 274.2 137.3 286.7C149.8 299.2 170.1 299.2 182.6 286.7L288 181.3L288 552C288 569.7 302.3 584 320 584C337.7 584 352 569.7 352 552L352 181.3L457.4 286.7C469.9 299.2 490.2 299.2 502.7 286.7C515.2 274.2 515.2 253.9 502.7 241.4L342.7 81.4z" />
+        </svg></a>
 </body>
 
 </html>
