--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="main-content grid-one-content">
             <h2 class="grid-main-heading">Gallery</h2>
             <p class="grid-description">Treine Display Grid, transição e rotação de imagens utilizando CSS!</p>
-            <div class="grid">
+            <div class="grid-two">
 
                 <div class="grid-img">
                     <img src="https://images.dog.ceo/breeds/collie-border/n02106166_5869.jpg" alt="">
